added squeryl demos